--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,16 @@ migrate_working_dir/
 # is commented out by default.
 #.vscode/
 
+# Claude Code related
+.claude/
+
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
@@ -43,3 +48,42 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# APK files (releases should be handled via GitHub Releases)
+*.apk
+*.aab
+
+# Keystore files (sensitive data)
+*.jks
+*.keystore
+key.properties
+
+# Local configuration files
+local.properties
+
+# Generated files
+*.g.dart
+*.freezed.dart
+
+# Environment files
+.env
+.env.*
+
+# Backup files
+*.backup
+*.bak
+*~
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Temporary files
+*.tmp
+*.temp
+
+# Log files
+*.log
+logs/
